<resources>
    <!--  Name of the app  -->
    <string name="app_name">Bucket List App</string>
    <string name="bucket_splash_screen_description">bucket for splash screen</string>
    <!--  strings in welcome activity  -->
    <string name="window_text">Welcome to the Bucket List App!</string>
    <string name="guest_button_label">Continue as Guest</string>
    <string name="guest_button_text">Continued as Guest</string>
    <string name="_4_buckets">4 buckets image</string>
    <!--  string in about us bucketlist activity  -->
    <string name="bucket_emoji">🪣</string>
    <string name="about_us_paragraph">Thanks for all the support, this mobile app was developed using Android Studio and Kotlin, all thanks to the tools provided at South East Technological University. \n\n Developer: Christian Zaccaria 😃✅\n \nCourse: Software Systems Development - Year 3</string>
    <string name="sunglasses_emoji">😎</string>
    <!--  strings in add bucketlist activity  -->
    <string name="button_addExperience">Add Experience</string>
    <string name="button_successfulAdd">Added Successfully!</string>
    <string name="experienceTitle">Experience Title</string>
    <string name="experienceCategory">Experience Category</string>
    <string name="experiencePriority">Experience Priority</string>
    <string name="experienceLocation">Experience Location</string>
    <string name="experienceImage">Experience Image</string>
    <string name="experienceCost">Experience Cost</string>
    <string name="experienceDueDate">Experience Due Date</string>
    <string name="experienceAchieved">Experience Achieved?</string>
    <string name="button_calendarPicker">Pick Due Date</string>
    <string name="dateFormat">%d/%d/%d</string>
    <string name="actionbar_bucketlistapp">Bucket List App</string>
    <string name="snackbar_fieldsNotCompleted">Required fields are not yet completed</string>
    <string name="button_successfulDelete">Deleted Successfully!</string>
    <string name="delete">Delete</string>
    <string name="priority_of_this_experience">Priority of this Experience</string>
    <string name="experience_image_description">experience-image</string>
    <string name="select_experience_image">Select experience image</string>
    <string name="update_location_button_text">View/Update Location</string>
    <!--  strings in list bucketlist activity  -->
    <string name="floatingButtonDescription">fab for adding experience</string>
    <string name="button_openAddActivity">Create your experience</string>
    <string name="button_saveExperience">Update Experience</string>
    <string name="achieved">\"Achieved \"</string>
    <string name="notAchieved">\"Not yet achieved \"</string>
    <string name="choose_category">Choose Category</string>
    <string name="search">Search</string>
    <string name="about_us">About us</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="profile_text">Profile</string>
    <!--  strings in login activity  -->
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="logout_button_text">LOGOUT</string>
    <string name="user_text_profile">User:</string>
    <string name="guest_gmail_com">guest@gmail.com</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>

    <!--  strings in register activity  -->
    <string name="register">REGISTER</string>
    <string name="username_hint">username</string>
    <string name="already_have_an_account">Already have an account ?</string>

    <!--  strings for viewing ALL experiences in map activity  -->
    <string name="view_all_markers">View all markers 🗺️</string>
    <string name="title_activity_experiences_maps">Map of All Experiences</string>
    <string name="experience_image">Experience Image</string>
    <string name="map_view_displaying_experiences">Map View displaying Experiences</string>
    <string name="no_date_yet">No Date Yet</string>

</resources>