<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BucketlistActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryBlue"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/action_bar_title"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:text="@string/actionbar_bucketlistapp"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white" />


        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--  Edit Experience Title text -->
                <EditText
                    android:id="@+id/experienceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/experienceTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryBlue"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/experienceCategory"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/experienceCategory"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryBlue"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/experiencePriority"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/experiencePriority"
                    android:inputType="number"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryBlue"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/experienceLocation"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/experienceLocation"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryBlue"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/experienceImage"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/experienceImage"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryBlue"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/experienceCost"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/experienceCost"
                    android:inputType="numberDecimal"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryBlue"
                    android:textSize="14sp" />

                <!--  Code below was taken from: https://www.mysamplecode.com/2012/03/android-edittext-button-same-line.html
                  and modified as needed.
                  This makes the button be beside the textview  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/linearLayout1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/experienceDueDate"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:hint="@string/experienceDueDate"/>
                    <Button
                        android:id="@+id/buttonDatePicker"
                        android:layout_width="212dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/button_calendarPicker" />
                </LinearLayout>

                <EditText
                    android:id="@+id/experienceAchieved"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/experienceAchieved"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/secondaryBlue"
                    android:textSize="14sp" />

                <!-- Button used to add a new experience -->
                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/primaryBlue"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addExperience"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>