<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutBucketListActivity">

    <TextView
        android:id="@+id/bucketEmoji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/bucket_emoji"
        android:textSize="90sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/paragraph_textview"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/paragraph_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="16dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/about_us_paragraph"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sunglassesEmoji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/sunglasses_emoji"
        android:textColor="#FFFFFF"
        android:textSize="90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paragraph_textview"
        app:layout_constraintVertical_bias="0.422" />


</androidx.constraintlayout.widget.ConstraintLayout>